2003-06-26  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.9

	* configure.in: Bump version number to 2.9, remove -Werror.

	* scripts/ypxfr_1perday.in: Add variable which contains maps
	to update.
	* scripts/ypxfr_1perhour.in: Likewise.
	* scripts/ypxfr_2perday.in: Likewise.

2003-06-06  Thorsten Kukuk  <kukuk@suse.de>

	* Add more portability changes from
	Petter Reinholdtsen <pere@hungry.com>

2003-06-06  Thorsten Kukuk  <kukuk@suse.de>

	* ypxfr/ypxfr_clnt.c (ypproc_master_2): New function.

	* ypxfr/ypxfr.c (ypxfr): Get official name of master host from
	master itself.

2003-06-05  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Check for availability of more functions.
	* rpc.ypxfrd/ypxfrd.h: Removed.
	* acinclude.m4: Add portability changes from
	Petter Reinholdtsen <pere@hungry.com>
	* lib/Makefile.am: Likewise.
	* lib/yp.h: Likewise.
	* lib/yp_db.c: Likewise.
	* lib/ypserv_conf.c: Likewise.
	* lib/ypxfrd.h: Likewise.
	* makedbm/Makefile.am: Likewise.
	* makedbm/makedbm.c: Likewise.
	* mknetid/Makefile.am: Likewise.
	* mknetid/mknetid.c: Likewise.
	* revnetgroup/Makefile.am: Likewise.
	* revnetgroup/hash.c: Likewise.
	* revnetgroup/revnetgroup.c: Likewise.
	* rpc.yppasswdd/Makefile.am: Likewise.
	* rpc.yppasswdd/update.c: Likewise.
	* rpc.yppasswdd/yppasswdd.c: Likewise.
	* rpc.ypxfrd/Makefile.am: Likewise.
	* rpc.ypxfrd/ypxfrd.c: Likewise.
	* rpc.ypxfrd/ypxfrd.h: Likewise.
	* rpc.ypxfrd/ypxfrd_svc.c: Likewise.
	* yphelper/Makefile.am: Likewise.
	* yphelper/yphelper.c: Likewise.
	* yppush/Makefile.am: Likewise.
	* yppush/yppush.c: Likewise.
	* ypserv/Makefile.am: Likewise.
	* ypserv/server.c: Likewise.
	* ypserv/ypserv.c: Likewise.
	* ypxfr/Makefile.am: Likewise.
	* ypxfr/ypxfr.c: Likewise.
	* ypxfr/ypxfr_xdr.c: Likewise.

2003-06-05  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Define max. number of children ypserv is allowed
	to have.

	* ypserv/ypserv.c: Remove ypserv_svc_run function, always use
	system svc_run().