@@ -1,5 +1,5 @@
 
-This is version 2.7 of an YP (NIS version 2) Server for Linux, but it
+This is version 2.9 of an YP (NIS version 2) Server for Linux, but it
 also runs under other OS like SunOS 4.1.x, Solaris 2.x, AIX, HP-UX,
 IRIS, Ultrix and OSF1 (alpha).
 
@@ -22,7 +22,7 @@ initgroups will need about 22 minutes for a group file with 10.000
 entries and ndbm, with gdbm, only 20 seconds. The load of the server
 is the same, but gdbm needs much more memory for caching.
 
-WARNING: NEVER use libdb1/libdb2 in ndbm compat mode, this does NOT work!
+WARNING: NEVER use libdb1-libdb4 in ndbm compat mode, this does NOT work!
 
 1024 Byte limit in NIS protocoll:
 ---------------------------------
@@ -37,4 +37,4 @@ versions support it.
 For more NIS or NIS+ related stuff, look at
 http://www.linux-nis.org/nis/ or http://www.linux-nis.org/nisplus/
 
-Thorsten Kukuk <kukuk@suse.de>, 4. February 2003
+Thorsten Kukuk <kukuk@suse.de>, 26. June 2003
