@@ -9,4 +9,5 @@ Miquel van Smoorenburg	<miquels@cistron.nl>
 Peter Breitenlohner	<peb@mppmu.mpg.de>
 Todd R. Eigenschink	<todd@tekinteractive.com>
 Petter Reinholdtsen	<pere@hungry.com>
+Jonathan Gowland	<jgowland@genaware.com>
 
